--- a/swish.cabal
+++ b/swish.cabal
@@ -46,7 +46,7 @@ Description:
   .
   Major Changes:
   .
-  [Version 0.3.1.1] Bug fixes to N3 output (string handling).
+  [Version 0.3.1.1] Bug fixes to N3 handling (string and numeric literals).
   .
   [Version 0.3.1.0] Added the `Swish.RDF.RDFGraph.ToRDFLabel` and
   `Swish.RDF.RDFGraph.FromRDFLabel` classes and the 
