Fix to Swish scripts to deal with recent changes that removed several default namespaces (in the 0.3.2 series)
--HG--
branch : parser-rewrite-polyparse

--- a/.hgignore
+++ b/.hgignore
@@ -5,6 +5,10 @@ syntax: glob
 *.o
 *.tix
 
+scripts/Example1.n3
+scripts/data/TestMerge.n3
+scripts/data/TestMerge.n3m
+
 syntax: regexp
 (.*/)?\#[^/]*\#$
 
