--- a/swish.cabal
+++ b/swish.cabal
@@ -146,6 +146,7 @@ Library
       base >=3 && < 5,
       text == 0.11.*,
       -- text-format == 0.2.*,
+      -- split == 0.1.*,
       binary == 0.5.*,
       bytestring == 0.9.*,
       containers == 0.3.*,
