--- a/swish.cabal
+++ b/swish.cabal
@@ -47,7 +47,8 @@ Description:
   Changes:
   .
   [Version 0.4.0.0] Moving to using polyparse for parsing and @Text@ rather than
-  @String@ where appropriate. Removed the Swish.Utils.DateTime and Swish.Utils.TraceHelpers
+  @String@ where appropriate. Use of @URI@ and @Maybe Text@ rather than @String@ in the @Namespace@
+  type. Removed the Swish.Utils.DateTime and Swish.Utils.TraceHelpers
   modules. Symbols have been removed from the export lists of the following modules:
   Swish.Utils.LookupMap, Swish.Utils.ListHelpers, Swish.Utils.MiscHelpers,
   Swish.Utils.ShowM.
@@ -154,7 +155,6 @@ Library
       parallel == 2.2.*,
       polyparse >= 1.6 && < 1.8,
       random == 1.0.*,
-      -- old-time == 1.0.*, 
       old-locale == 1.0.*, time == 1.1.*,
       mtl >= 1 && < 3,
       HUnit == 1.2.*,
