--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.4.0.0
+Version:            0.5.0.0
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -45,6 +45,10 @@ Description:
   * Complete, ready-to-run, command-line and script-driven programs.
   .
   Changes:
+  .
+  [Version 0.5.0.0] Changes to @ScopedName@ to provide significant reduction
+  in time to write out a graph. This should be considered an experimental change;
+  as a consequence the record fields for ScopedName are no longer exported.
   .
   [Version 0.4.0.0] Moving to using polyparse for parsing and @Text@ rather than
   @String@ where appropriate. Use of @URI@ and @Maybe Text@ rather than @String@ in the @Namespace@
