Removed QName constructor

--- a/swish.cabal
+++ b/swish.cabal
@@ -46,9 +46,8 @@ Description:
   .
   Changes:
   .
-  [Version 0.5.0.0] Changes to @ScopedName@ to provide significant reduction
-  in time to write out a graph. This should be considered an experimental change;
-  as a consequence the record fields for ScopedName are no longer exported.
+  [Version 0.5.0.0] The constructors for @ScopedName@ and @QName@ have been
+  removed to hide some experimental optimisations (partly added in 0.4.0.0).
   .
   [Version 0.4.0.0] Moving to using polyparse for parsing and @Text@ rather than
   @String@ where appropriate. Use of @URI@ and @Maybe Text@ rather than @String@ in the @Namespace@
