--- a/swish.cabal
+++ b/swish.cabal
@@ -46,6 +46,9 @@ Description:
   .
   Changes:
   .
+  [Version 0.6.0.0] Add Data.Interned.URI and use it to speed up the QName
+  equality check.
+  .
   [Version 0.5.0.3] Didn't get all the required @FlexibleInstances@.
   .
   [Version 0.5.0.2] HUnit constraint is only added when the @tests@ flag
