--- a/swish.cabal
+++ b/swish.cabal
@@ -27,9 +27,8 @@ Description:
   .
   Swish is a work-in-progress, and currently incorporates:
   .
-  * Notation3 and NTriples input and output. The N3 support is
-    incomplete (no handling of @\@forAll@). Turtle format for
-    input.
+  * Turtle, Notation3 and NTriples input and output. The N3 support is
+    incomplete (no handling of @\@forAll@).
   .
   * RDF graph isomorphism testing and merging.
   .
@@ -47,8 +46,8 @@ Description:
   .
   Changes:
   .
-  [Version 0.6.1.0] Support for Turtle format (added Swish.RDF.TurtleParser)
-  as input.
+  [Version 0.6.1.0] Support for Turtle format (added the Swish.RDF.TurtleFormatter
+  and Swish.RDF.TurtleParser modules).
   .
   [Version 0.6.0.2] Minor internal changes.
   .
@@ -223,6 +222,7 @@ Library
       Swish.RDF.SwishMain
       Swish.RDF.SwishMonad
       Swish.RDF.SwishScript
+      Swish.RDF.TurtleFormatter
       Swish.RDF.TurtleParser
       Swish.RDF.VarBinding
       Swish.RDF.Vocabulary
