--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.6.1.3
+Version:            0.6.2.0
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -46,7 +46,8 @@ Description:
   .
   Changes:
   .
-  [Version 0.6.1.3] No change as yet.
+  [Version 0.6.2.0] Updated 'Swish.RDF.Vocabulary' and 'Swish.RDF.RDFGraph' to
+  include more common RDF terms.
   .
   [Version 0.6.1.2] Corrected minimum mtl constraint from 1 to 2 and updated
   the maximum time version to 1.4 from 1.3.
